fix: layout issue with too large items in search

--- a/app/app.css
+++ b/app/app.css
@@ -65,7 +65,7 @@ nav select:focus {
 .list-items {
 	display: grid;
 	gap: 2rem;
-	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+	grid-template-columns: repeat(auto-fill, minmax(min(300px, 100%), 1fr));
 	padding: 2rem;
 }
 
